--- a/mindwell-connect/src/main/resources/application.properties
+++ b/mindwell-connect/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Mindwell Connect
 spring.datasource.url=jdbc:mysql://localhost:3306/mindwell_db
 spring.datasource.username=root
-spring.datasource.password=your_password
+spring.datasource.password=abc123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
